[package]
name = "aleph-tui"
version = "0.4.0"
edition = "2021"
repository = "https://github.com/stchris/aleph-tui"
homepage = "https://github.com/stchris/aleph-tui"
description = "A text user interface for Aleph"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
color-eyre = "0.6"
crossterm = { version = "0.28", features = ["event-stream"] }
home = "0.5"
human-panic = "2.0.1"
humanize-duration = { version = "0.0", features = ["chrono"] }
itertools = "0.13.0"
num-format = "0.4"
ratatui = "0.28"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
toml = "0.8"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
]
# Which actions to run on pull requests
pr-run-mode = "plan"
# A GitHub repo to push Homebrew formulas to
tap = "stchris/homebrew-formulae"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Whether to install an updater program
install-updater = false
# Path that installers should place binaries in
install-path = "CARGO_HOME"

[workspace.metadata.release]
publish = false
push = true
tag = true
pre-release-hook = [
  "git",
  "cliff",
  "-o",
  "CHANGELOG.md",
  "--tag",
  "{{version}}",
]
